libtss-ffi/libtss.h

/* libtss.h - Generated by cbindgen. Do not edit. */

#ifndef LIBTSS_H
#define LIBTSS_H

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

// Flag for `tss_init`: lock all current and future pages into RAM.
//
// Requires `CAP_IPC_LOCK` or `ulimit -l unlimited`.
#define TSS_INIT_MLOCK 1

typedef struct TssSlice {
    const uint8_t *data;
    size_t len;
} TssSlice;

typedef int32_t TssStatus;

typedef uint64_t TssHandle;

typedef struct TssBuffer {
    uint8_t *data;
    size_t len;
} TssBuffer;

#define TSS_OK 0

#define TSS_ERR_INVALID_CONFIG 1

#define TSS_ERR_INVALID_ID 2

#define TSS_ERR_INVALID_SHARE 3

#define TSS_ERR_INVALID_COMMIT 4

#define TSS_ERR_INVALID_SIG 5

#define TSS_ERR_NONCE_REUSE 6

#define TSS_ERR_HANDLE_INVALID 7

#define TSS_ERR_PROTO_MISMATCH 8

#define TSS_ERR_DESERIALIZE 9

#define TSS_ERR_ABORT 10

#define TSS_ERR_ABORT_BAN 11

#define TSS_ERR_TWEAK 13

#define TSS_ERR_SESSION_COMPLETE 14

#define TSS_ERR_INTERNAL_PANIC 255

const char *tss_version(void);

bool tss_verify(uint8_t suite,
                struct TssSlice message,
                struct TssSlice signature,
                struct TssSlice public_key);

// Derive a child key share using non-hardened BIP-32 derivation.
//
// Supports Secp256k1ECDSA (DKLs23), Secp256r1ECDSA (DKLs23), and
// Secp256k1Taproot (FROST). Returns `TSS_ERR_PROTO_MISMATCH` for
// unsupported ciphersuites (e.g. Ed25519).
//
// The original key share remains valid; the derived key is a new handle.
TssStatus tss_derive_child(TssHandle key_share, uint32_t child_number, TssHandle *out_handle);

// Derive a key share along a BIP-32 path (e.g. "m/44/60/0/0").
//
// Hardened segments (e.g. "m/44'/0'") are rejected with
// `TSS_ERR_INVALID_CONFIG`. The `path` must be a valid UTF-8
// NUL-terminated C string.
TssStatus tss_derive_path(TssHandle key_share, const char *path, TssHandle *out_handle);

// Return a pointer to the last error message (NUL-terminated).
//
// **Lifetime:** The returned pointer is only valid until the next libtss FFI
// call on the *same thread*. Every FFI entry clears the error state, which
// invalidates the pointer. Callers must copy the string immediately.
//
// For a safer alternative, use `tss_last_error_copy`.
const char *tss_last_error(void);

// Return the byte length of the last error message (excluding NUL).
//
// **Lifetime:** Must be called without any intervening libtss FFI calls
// after the function that produced the error. See `tss_last_error`.
size_t tss_last_error_len(void);

// Copy the last error message into a caller-provided buffer.
//
// Returns the number of bytes needed (including NUL). If `buf` is null or
// `buf_len` is 0, only the required size is returned. If the buffer is too
// small, the message is truncated and NUL-terminated.
//
// This is the recommended way to read errors — it atomically reads both
// length and content in a single borrow, avoiding the TOCTOU window
// between `tss_last_error_len` and `tss_last_error`.
size_t tss_last_error_copy(uint8_t *buf, size_t buf_len);

size_t tss_abort_culprit_count(void);

uint16_t tss_abort_culprit(size_t index);

uint16_t tss_abort_banned_party(void);

TssStatus tss_frost_aggregate(uint8_t suite,
                              struct TssSlice message,
                              struct TssSlice commitments,
                              struct TssSlice shares,
                              struct TssSlice pubkey_package,
                              struct TssBuffer *out_signature);

TssStatus tss_frost_tweak_key_share(TssHandle key_share,
                                    const uint8_t *merkle_root,
                                    size_t merkle_root_len,
                                    TssHandle *out_tweaked_share);

TssStatus tss_frost_tweak_pubkey_package(struct TssSlice pubkey_package,
                                         const uint8_t *merkle_root,
                                         size_t merkle_root_len,
                                         struct TssBuffer *out_tweaked_package);

TssStatus tss_frost_generate_dealer(uint8_t suite,
                                    uint16_t max_signers,
                                    uint16_t min_signers,
                                    TssHandle *out_handles,
                                    size_t *out_handle_count,
                                    struct TssBuffer *out_pubkey_package);

TssStatus tss_frost_split_key(uint8_t suite,
                              struct TssSlice secret_key,
                              uint16_t max_signers,
                              uint16_t min_signers,
                              TssHandle *out_handles,
                              size_t *out_handle_count,
                              struct TssBuffer *out_pubkey_package);

TssStatus tss_frost_refresh_dealer(struct TssSlice pubkey_package,
                                   const uint16_t *participants,
                                   size_t participant_count,
                                   struct TssBuffer *out_refresh_shares,
                                   size_t *out_share_count,
                                   struct TssBuffer *out_pubkey_package);

TssStatus tss_frost_apply_refresh(TssHandle key_share,
                                  struct TssSlice refresh_data,
                                  struct TssSlice pubkey_package,
                                  TssHandle *out_key_share);

TssStatus tss_frost_repair_part1(TssHandle key_share,
                                 const uint16_t *helpers,
                                 size_t helper_count,
                                 uint16_t participant,
                                 struct TssBuffer *out_deltas,
                                 size_t *out_delta_count);

TssStatus tss_frost_repair_part2(uint8_t suite,
                                 const struct TssSlice *deltas,
                                 size_t delta_count,
                                 struct TssBuffer *out_sigma);

TssStatus tss_frost_repair_part3(const struct TssSlice *sigmas,
                                 size_t sigma_count,
                                 uint16_t participant,
                                 struct TssSlice pubkey_package,
                                 TssHandle *out_key);

TssStatus tss_handle_identifier(TssHandle handle, uint16_t *out_id);

TssStatus tss_handle_verifying_share(TssHandle handle, struct TssBuffer *out);

TssStatus tss_handle_group_key(TssHandle handle, struct TssBuffer *out);

TssStatus tss_handle_chain_code(TssHandle handle, struct TssBuffer *out);

TssStatus tss_handle_pubkey_package(TssHandle handle, struct TssBuffer *out);

uint8_t tss_handle_ciphersuite(TssHandle handle);

// Export a key share as a serialized byte blob.
//
// **Security:** The output contains unencrypted secret key material.
// The caller MUST encrypt the bytes before persisting to disk or
// transmitting over a network.
TssStatus tss_handle_export(TssHandle handle, struct TssBuffer *out);

TssStatus tss_handle_import(const uint8_t *data,
                            size_t data_len,
                            uint8_t suite,
                            TssHandle *out_handle);

// Perform optional one-time initialization.
//
// # Flags
//
// - `TSS_INIT_MLOCK` (1): Call `mlockall(MCL_CURRENT | MCL_FUTURE)` to prevent
//   all process pages from being swapped to disk. This protects both Rust-side
//   key material and any mmap'd buffers (e.g., Go memguard) from being written
//   to swap. Requires `CAP_IPC_LOCK` capability or sufficient `RLIMIT_MEMLOCK`.
//
// Returns `TSS_OK` on success. On failure, sets the last error message.
TssStatus tss_init(uint32_t flags);

// Free a buffer previously returned by a libtss FFI function.
//
// The buffer data is zeroed before deallocation to prevent secret
// material from persisting in freed heap memory. The caller's
// `TssBuffer` is then set to empty, so a second call with the same
// pointer is a safe no-op (prevents double-free).
void tss_buffer_free(struct TssBuffer *buf);

// Free a key share handle. Session handles are freed automatically on
// completion; use this only for `KeyShareHandle` returned by DKG/refresh.
void tss_handle_free(uint64_t handle);

size_t tss_message_count(struct TssSlice messages);

TssStatus tss_message_at(struct TssSlice messages,
                         size_t index,
                         uint16_t *out_from,
                         uint16_t *out_to,
                         struct TssSlice *out_data);

TssStatus tss_message_build(struct TssBuffer *buf,
                            uint16_t from,
                            uint16_t to,
                            const uint8_t *data,
                            size_t data_len);

TssStatus tss_dkg_new(uint8_t suite,
                      uint16_t self_id,
                      uint16_t max_signers,
                      uint16_t min_signers,
                      const uint8_t *session_id,
                      size_t session_id_len,
                      TssHandle *out_session,
                      struct TssBuffer *out_messages);

TssStatus tss_dkg_next(TssHandle session,
                       struct TssSlice messages,
                       TssHandle *out_key_share,
                       struct TssBuffer *out_pubkey_package,
                       struct TssBuffer *out_messages,
                       bool *out_complete);

TssStatus tss_sign_new(TssHandle key_share,
                       struct TssSlice message,
                       const uint16_t *counterparties,
                       size_t counterparties_len,
                       const uint8_t *sign_id,
                       size_t sign_id_len,
                       TssHandle *out_session,
                       struct TssBuffer *out_messages);

TssStatus tss_sign_next(TssHandle session,
                        struct TssSlice messages,
                        struct TssBuffer *out_signature,
                        struct TssBuffer *out_messages,
                        bool *out_complete);

TssStatus tss_refresh_new(TssHandle key_share,
                          const uint16_t *participants,
                          size_t participants_len,
                          TssHandle *out_session,
                          struct TssBuffer *out_messages);

TssStatus tss_refresh_receiver(TssHandle key_share, TssHandle *out_session);

TssStatus tss_refresh_next(TssHandle session,
                           struct TssSlice messages,
                           TssHandle *out_key_share,
                           struct TssBuffer *out_pubkey_package,
                           struct TssBuffer *out_messages,
                           bool *out_complete);

void tss_session_free(TssHandle session);

#endif  /* LIBTSS_H */